[package]
name = "system-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
fs_extra = "1.3.0"
futures = "0.3.31"
influxdb2 = "0.5.2"
log = "0.4.26"
log4rs = "1.3.0"
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.140"
sysinfo = "0.33.1"
tokio = { version = "1.44.1", features = ["full"] }
